--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,10 @@
 *.opensdf
 *.sdf
 *.VC.db
+*.temp
+*.tmp
+*.udb
+*.opendb
 *.VC.opendb
 .vsconfig
 
@@ -52,6 +56,7 @@ Plugins/**/Binaries/*
 
 # Builds
 Build/*
+WindowsNoEditor/*
 
 # Whitelist PakBlacklist-<BuildConfiguration>.txt files
 !Build/*/
